fix: [Tag] 3px white space problem (#687)

--- a/packages/semi-foundation/tag/tag.scss
+++ b/packages/semi-foundation/tag/tag.scss
@@ -18,6 +18,7 @@ $types: "ghost", "solid", "light";
     // hidden avatar tag image
     overflow: hidden;
     white-space: nowrap;
+    vertical-align: bottom;
 
     &-default,
     &-small {
